# CoHAN_Planner

./: .gitmodules  LICENSE  README.md
hateb_local_planner/: CMakeLists.txt  LICENSE  hateb_local_planner_plugin.xml  package.xml
hateb_local_planner/cfg/: HATebLocalPlannerReconfigure.cfg
hateb_local_planner/include/hateb_local_planner/: backoff.h  distance_calculations.h  equivalence_relations.h  graph_search.h  h_signature.h  hateb_config.h  hateb_local_planner_ros.h  homotopy_class_planner.h  homotopy_class_planner.hpp  misc.h  obstacles.h  optimal_planner.h  planner_interface.h  pose_se2.h  recovery_behaviors.h  robot_footprint_model.h  static_plan_visualizer.h  timed_elastic_band.h  timed_elastic_band.hpp  visualization.h  visualization.hpp
hateb_local_planner/include/hateb_local_planner/g2o_types/: base_teb_edges.h  edge_acceleration.h  edge_dynamic_obstacle.h  edge_human_human_safety.h  edge_human_robot_rel_velocity.h  edge_human_robot_safety.h  edge_human_robot_ttc.h  edge_human_robot_ttcplus.h  edge_human_robot_visibility.h  edge_kinematics.h  edge_obstacle.h  edge_prefer_rotdir.h  edge_shortest_path.h  edge_time_optimal.h  edge_velocity.h  edge_via_point.h  penalties.h  vertex_pose.h  vertex_timediff.h
hateb_local_planner/msg/: FeedbackMsg.msg  OptimizationCost.msg  OptimizationCostArray.msg  TrajectoryMsg.msg  TrajectoryPointMsg.msg
hateb_local_planner/rviz/: hateb.rviz
hateb_local_planner/src/: backoff.cpp  graph_search.cpp  hateb_config.cpp  hateb_local_planner_ros.cpp  homotopy_class_planner.cpp  obstacles.cpp  optimal_planner.cpp  recovery_behaviors.cpp  static_plan_visualizer.cpp  test_optim_node.cpp  timed_elastic_band.cpp  visualization.cpp
hateb_local_planner/srv/: Approach.srv  Optimize.srv
hateb_local_planner/test/: teb_basics.cpp
human_layers/: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
human_layers/cfg/: HumanLayer.cfg  HumanVLayer.cfg
human_layers/include/human_layers/: human_layer.h  human_visibility_layer.h  static_human_layer.h
human_layers/launch/: human_filter.launch
human_layers/scripts/: human_filter.py
human_layers/src/: human_layer.cpp  human_visibility_layer.cpp  static_human_layer.cpp
human_msgs/: CMakeLists.txt  package.xml
human_msgs/msg/: HumanArray.msg  HumanMarker.msg  HumanMarkerStamped.msg  HumanPath.msg  HumanPathArray.msg  HumanTimeToGoal.msg  HumanTimeToGoalArray.msg  HumanTrajectory.msg  HumanTrajectoryArray.msg  HumanTwist.msg  HumanTwistArray.msg  StateArray.msg  TimeToGoal.msg  TrackedHuman.msg  TrackedHumanArray.msg  TrackedSegment.msg  TrackedSegmentType.msg  Trajectory.msg  TrajectoryArray.msg  TrajectoryMsg.msg  TrajectoryPoint.msg  TwistArray.msg
human_path_prediction/: CMakeLists.txt  package.xml
human_path_prediction/cfg/: HumanPathPrediction.cfg
human_path_prediction/include/human_path_prediction/: human_path_prediction.h
human_path_prediction/msg/: HumanPose.msg  PredictedGoal.msg  PredictedPoses.msg
human_path_prediction/scripts/: predict_goal.py
human_path_prediction/src/: human_path_prediction.cpp
human_path_prediction/srv/: HumanGoal.srv  HumanPosePredict.srv
rviz_path_array/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_path_array/icons/classes/: path_array.xcf
rviz_path_array/src/: patharray_display.cpp  patharray_display.h
